[gd_scene load_steps=3 format=3 uid="uid://ejkmvl12v0hm"]

[ext_resource type="Script" path="res://scenes/learning_scene.gd" id="1_learning"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_1"]
bg_color = Color(0.95, 0.92, 0.88, 1)

[node name="Learning scene" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_learning")

[node name="Background" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.15, 0.12, 0.1, 1)

[node name="BookContainer" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -450.0
offset_top = -300.0
offset_right = 450.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2

[node name="PageContainer" type="Control" parent="BookContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CurrentPage" type="Panel" parent="BookContainer/PageContainer"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_1")

[node name="PageContent" type="RichTextLabel" parent="BookContainer/PageContainer/CurrentPage"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
offset_left = 40.0
offset_top = 40.0
offset_right = -40.0
offset_bottom = -40.0
theme_override_colors/default_color = Color(0.2, 0.15, 0.1, 1)
theme_override_font_sizes/normal_font_size = 20
bbcode_enabled = true

[node name="PageNumber" type="Label" parent="BookContainer/PageContainer/CurrentPage"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_top = -30.0
offset_right = 0.0
grow_horizontal = 2
grow_vertical = 0
theme_override_font_sizes/font_size = 16
text = "Page 1 of 5"
horizontal_alignment = 1

[node name="Controls" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = -100.0
offset_right = 350.0
offset_bottom = -20.0
grow_vertical = 0

[node name="ArrowKeysLabel" type="Label" parent="Controls"]
layout_mode = 2
theme_override_font_sizes/font_size = 16
theme_override_colors/font_color = Color(0.8, 0.8, 0.8, 1)
text = "Use Arrow Keys to Navigate:"

[node name="ArrowKeys" type="HBoxContainer" parent="Controls"]
layout_mode = 2

[node name="LeftArrow" type="Label" parent="Controls/ArrowKeys"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "←"

[node name="LeftText" type="Label" parent="Controls/ArrowKeys"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "Previous"

[node name="Spacer" type="Control" parent="Controls/ArrowKeys"]
layout_mode = 2
custom_minimum_size = Vector2(40, 0)

[node name="RightText" type="Label" parent="Controls/ArrowKeys"]
layout_mode = 2
theme_override_font_sizes/font_size = 18
theme_override_colors/font_color = Color(0.9, 0.9, 0.9, 1)
text = "Next"

[node name="RightArrow" type="Label" parent="Controls/ArrowKeys"]
layout_mode = 2
theme_override_font_sizes/font_size = 24
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "→"

[node name="CloseButton" type="Button" parent="."]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -80.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = 60.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 28
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hover_color = Color(1, 0.8, 0.8, 1)
text = "✕"
